Improve mobile pages.

--- a/src/app/mobile/select.html
+++ b/src/app/mobile/select.html
@@ -4,4 +4,6 @@
     <h1>Select Page</h1>
   </div>
 
+  <div ng-click="select.goToPlayPage('a')">This is a link to play the 'a' note.</div>
+
 </div>
