--- a/src/app/display/display.html
+++ b/src/app/display/display.html
@@ -1,21 +1,1 @@
-<div class="container">
-
-  <div class="row bg-gray text-center">
-    <div class="col-xs-12">
-      <h1>SELECT A SONG:</h1>
-    </div>
-  </div>
-
-  <div class="row add-top">
-    <div class="col-xs-4 card" ng-repeat="(id, song) in display.songs">
-      <div class="card-block text-center">
-        <h4 class="card-title">{{song.name}}</h4>
-        <hr/>
-        <button ui-sref="display.song({songId: id})" class="btn btn-primary">SELECT</button>
-      </div>
-    </div>
-
-    <div class="clearfix"></div>
-  </div>
-
-</div>
+<ui-view></ui-view>
