--- a/src/app/display/song.html
+++ b/src/app/display/song.html
@@ -1,7 +1,8 @@
 <div class="container">
-
-  <div class="jumbotron text-center">
-    <h1>Music time!</h1>
+  <div class="row bg-gray text-center">
+    <div class="col-xs-12">
+      <h1>Eggnog Orchestrator:</h1>
+    </div>
   </div>
 
   <div class="staff">
