--- a/src/app/mobile/select.html
+++ b/src/app/mobile/select.html
@@ -1,9 +1,71 @@
 <div class="container">
 
   <div class="jumbotron text-center">
-    <h1>Select Page</h1>
+    <h1>Select Your Color!</h1>
   </div>
-
-  <div ng-click="select.goToPlayPage('a')">This is a link to play the 'a' note.</div>
-
+  <!-- <table class="table table-bordered">
+        <tbody>
+            <tr>
+                <td class="darkred" ng-click="select.goToPlayPage('0')">Low C</td>
+                <td class="orange" ng-click="select.goToPlayPage('1')">This is a link to play the '1' note.</td>
+            </tr>
+            <tr>
+                <td class="yellow" ng-click="select.goToPlayPage('2')">This is a link to play the '2' note.</td>
+                <td class="green" ng-click="select.goToPlayPage('3')">This is a link to play the '3' note.</td>
+            </tr>
+            <tr>
+                <td class="blue" ng-click="select.goToPlayPage('4')">This is a link to play the '4' note.</td>
+                <td class="indigo" ng-click="select.goToPlayPage('5')">This is a link to play the '5' note.</td>
+            </tr>
+            <tr>
+                <td class="violet" ng-click="select.goToPlayPage('6')">This is a link to play the '6' note.</td>
+                <td class="lightred" ng-click="select.goToPlayPage('7')">This is a link to play the '7' note.</td>
+            </tr>
+        </tbody>
+    </table>
+ </div> -->
+ <div class="notes">
+	 <div class="container">
+	  <div class="btn-toolbar " role="toolbar">
+	    <div class=" btn-group btn-group-lg btn-group-justified btn-group-fill-height">
+	      <a href="#" class="btn  btn-darkred" role="button">
+	        <strong>Low C</strong><br>
+	      </a>
+	      <a href="#" class="btn btn-orange" role="button">
+	        <strong>D</strong><br>
+	      </a>
+	    </div>
+	  </div>
+	  <div class="btn-toolbar" role="toolbar">
+	    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
+	      <a href="#" class="btn btn-yellow" role="button">
+	        <strong>E</strong><br>
+	      </a>
+	      <a href="#" class="btn btn-success" role="button">
+	        <strong>F</strong><br>
+	      </a>
+	    </div>
+	  </div>
+	  <div class="btn-toolbar" role="toolbar">
+	    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
+	      <a href="#" class="btn btn-primary" role="button">
+	        <strong>G</strong><br>
+	      </a>
+	      <a href="#" class="btn btn-indigo" role="button">
+	        <strong>A</strong><br>
+	      </a>
+	    </div>
+	  </div>
+	  <div class="btn-toolbar" role="toolbar">
+	    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
+	      <a href="#" class="btn btn-violet" role="button">
+	        <strong>B</strong><br>
+	      </a>
+	      <a href="#" class="btn btn-lightred" role="button">
+	        <strong>High C</strong><br>
+	      </a>
+	    </div>
+	  </div>
+	</div>
 </div>
+
