--- a/src/app/mobile/mobile.html
+++ b/src/app/mobile/mobile.html
@@ -1,8 +1,8 @@
 <div class="container">
 
-  <div class="jumbotron text-center">
+<!--   <div class="jumbotron text-center">
     <h1>Mobile Page</h1>
-  </div>
+  </div> -->
 
   <ui-view></ui-view>
 
