*Bug fixes. *Minor interface fixes.

--- a/src/app/display/song.html
+++ b/src/app/display/song.html
@@ -2,6 +2,7 @@
   <div class="row bg-gray text-center">
     <div class="col-xs-12">
       <h1 ng-click="song.start()">Eggnog Conductor:</h1>
+      <h2>Measures Played: {{song.measuresPlayed}}</h2>
     </div>
   </div>
 
@@ -32,3 +33,4 @@
   </div>
 
 </div>
+<div class="play-line"></div>
