--- a/src/app/index.css
+++ b/src/app/index.css
@@ -137,7 +137,7 @@ td.blue {
 div.measure {
   position: absolute;
   width: 20%;
-  height: 120px;
+  height: 200px;
   -webkit-transition: all 2s linear;
   -moz-transition: all 2s linear;
   -o-transition: all 2s linear;
@@ -151,5 +151,9 @@ div.measure {
 
 .height150 {
   max-height: 150px;
+}
+
+.height75 {
+  max-height: 75px;
 }
 
