--- a/src/app/display/song.html
+++ b/src/app/display/song.html
@@ -8,6 +8,10 @@
       </div>
 
       <h5>Measures Played: {{song.measuresPlayed}}</h5>
+
+      <div class="add-top add-bottom">
+        <button ng-click="song.start()" class="btn btn-primary">PLAY!</button>
+      </div>
     </div>
 
     <div class="clearfix"></div>
