--- a/src/app/mobile/select.html
+++ b/src/app/mobile/select.html
@@ -28,40 +28,40 @@
 	 <div class="container">
 	  <div class="btn-toolbar " role="toolbar">
 	    <div class=" btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-	      <a href="#" class="btn  btn-darkred" role="button">
+	      <a href="#" class="btn  btn-darkred" role="button" ng-click="select.goToPlayPage('0')">
 	        <strong>Low C</strong><br>
 	      </a>
-	      <a href="#" class="btn btn-orange" role="button">
+	      <a href="#" class="btn btn-orange" role="button" ng-click="select.goToPlayPage('1')">
 	        <strong>D</strong><br>
 	      </a>
 	    </div>
 	  </div>
 	  <div class="btn-toolbar" role="toolbar">
 	    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-	      <a href="#" class="btn btn-yellow" role="button">
+	      <a href="#" class="btn btn-yellow" role="button" ng-click="select.goToPlayPage('2')">
 	        <strong>E</strong><br>
 	      </a>
-	      <a href="#" class="btn btn-success" role="button">
+	      <a href="#" class="btn btn-success" role="button" ng-click="select.goToPlayPage('3')">
 	        <strong>F</strong><br>
 	      </a>
 	    </div>
 	  </div>
 	  <div class="btn-toolbar" role="toolbar">
 	    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-	      <a href="#" class="btn btn-primary" role="button">
+	      <a href="#" class="btn btn-primary" role="button" ng-click="select.goToPlayPage('4')">
 	        <strong>G</strong><br>
 	      </a>
-	      <a href="#" class="btn btn-indigo" role="button">
+	      <a href="#" class="btn btn-indigo" role="button" ng-click="select.goToPlayPage('5')">
 	        <strong>A</strong><br>
 	      </a>
 	    </div>
 	  </div>
 	  <div class="btn-toolbar" role="toolbar">
 	    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-	      <a href="#" class="btn btn-violet" role="button">
+	      <a href="#" class="btn btn-violet" role="button" ng-click="select.goToPlayPage('6')">
 	        <strong>B</strong><br>
 	      </a>
-	      <a href="#" class="btn btn-lightred" role="button">
+	      <a href="#" class="btn btn-lightred" role="button" ng-click="select.goToPlayPage('7')">
 	        <strong>High C</strong><br>
 	      </a>
 	    </div>
