fixed mobile select routing issue by using ui-sref

--- a/src/app/mobile/select.html
+++ b/src/app/mobile/select.html
@@ -28,40 +28,40 @@
 	 <div class="container">
 	  <div class="btn-toolbar " role="toolbar">
 	    <div class=" btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-	      <a href="#" class="btn  btn-darkred" role="button" ng-click="select.goToPlayPage('0')">
+	      <a class="btn  btn-darkred" role="button" ui-sref="mobile.play({note: 0})">
 	        <strong>Low C</strong><br>
 	      </a>
-	      <a href="#" class="btn btn-orange" role="button" ng-click="select.goToPlayPage('1')">
+	      <a class="btn btn-orange" role="button" ui-sref="mobile.play({note: 1})">
 	        <strong>D</strong><br>
 	      </a>
 	    </div>
 	  </div>
 	  <div class="btn-toolbar" role="toolbar">
 	    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-	      <a href="#" class="btn btn-yellow" role="button" ng-click="select.goToPlayPage('2')">
+	      <a class="btn btn-yellow" role="button" ui-sref="mobile.play({note: 2})">
 	        <strong>E</strong><br>
 	      </a>
-	      <a href="#" class="btn btn-success" role="button" ng-click="select.goToPlayPage('3')">
+	      <a class="btn btn-success" role="button" ui-sref="mobile.play({note: 3})">
 	        <strong>F</strong><br>
 	      </a>
 	    </div>
 	  </div>
 	  <div class="btn-toolbar" role="toolbar">
 	    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-	      <a href="#" class="btn btn-primary" role="button" ng-click="select.goToPlayPage('4')">
+	      <a class="btn btn-primary" role="button" ui-sref="mobile.play({note: 4})">
 	        <strong>G</strong><br>
 	      </a>
-	      <a href="#" class="btn btn-indigo" role="button" ng-click="select.goToPlayPage('5')">
+	      <a class="btn btn-indigo" role="button" ui-sref="mobile.play({note: 5})">
 	        <strong>A</strong><br>
 	      </a>
 	    </div>
 	  </div>
 	  <div class="btn-toolbar" role="toolbar">
 	    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-	      <a href="#" class="btn btn-violet" role="button" ng-click="select.goToPlayPage('6')">
+	      <a class="btn btn-violet" role="button" ui-sref="mobile.play({note: 6})">
 	        <strong>B</strong><br>
 	      </a>
-	      <a href="#" class="btn btn-lightred" role="button" ng-click="select.goToPlayPage('7')">
+	      <a class="btn btn-lightred" role="button" ui-sref="mobile.play({note: 7})">
 	        <strong>High C</strong><br>
 	      </a>
 	    </div>
