--- a/src/app/mobile/select.html
+++ b/src/app/mobile/select.html
@@ -1,7 +1,7 @@
 <div class="container">
 
-  <div class="jumbotron text-center">
-    <h1>Select Your Color!</h1>
+  <div class="eggnog-title">
+    <h1>Select Your Note!</h1>
   </div>
   <!-- <table class="table table-bordered">
         <tbody>
@@ -24,48 +24,46 @@
         </tbody>
     </table>
  </div> -->
- <div class="notes">
-	 <div class="container">
-	  <div class="btn-toolbar " role="toolbar">
-	    <div class=" btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-	      <a href="#" class="btn  btn-darkred" role="button">
-	        <strong>Low C</strong><br>
-	      </a>
-	      <a href="#" class="btn btn-orange" role="button">
-	        <strong>D</strong><br>
-	      </a>
-	    </div>
-	  </div>
-	  <div class="btn-toolbar" role="toolbar">
-	    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-	      <a href="#" class="btn btn-yellow" role="button">
-	        <strong>E</strong><br>
-	      </a>
-	      <a href="#" class="btn btn-success" role="button">
-	        <strong>F</strong><br>
-	      </a>
-	    </div>
-	  </div>
-	  <div class="btn-toolbar" role="toolbar">
-	    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-	      <a href="#" class="btn btn-primary" role="button">
-	        <strong>G</strong><br>
-	      </a>
-	      <a href="#" class="btn btn-indigo" role="button">
-	        <strong>A</strong><br>
-	      </a>
-	    </div>
-	  </div>
-	  <div class="btn-toolbar" role="toolbar">
-	    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-	      <a href="#" class="btn btn-violet" role="button">
-	        <strong>B</strong><br>
-	      </a>
-	      <a href="#" class="btn btn-lightred" role="button">
-	        <strong>High C</strong><br>
-	      </a>
-	    </div>
-	  </div>
-	</div>
+ <div class="eggnog-notes container">
+  <div class="btn-toolbar " role="toolbar">
+    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
+      <a href="#" class="btn  btn-darkred" ng-click="select.goToPlayPage('0')" role="button">
+        <strong>Low C</strong><br>
+      </a>
+      <a href="#" class="btn btn-orange" ng-click="select.goToPlayPage('1')" role="button">
+        <strong>D</strong><br>
+      </a>
+    </div>
+  </div>
+  <div class="btn-toolbar" role="toolbar">
+    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
+      <a href="#" class="btn btn-yellow" ng-click="select.goToPlayPage('2')" role="button">
+        <strong>E</strong><br>
+      </a>
+      <a href="#" class="btn btn-success" ng-click="select.goToPlayPage('3')" role="button">
+        <strong>F</strong><br>
+      </a>
+    </div>
+  </div>
+  <div class="btn-toolbar" role="toolbar">
+    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
+      <a href="#" class="btn btn-primary" ng-click="select.goToPlayPage('4')" role="button">
+        <strong>G</strong><br>
+      </a>
+      <a href="#" class="btn btn-indigo" ng-click="select.goToPlayPage('5')" role="button">
+        <strong>A</strong><br>
+      </a>
+    </div>
+  </div>
+  <div class="btn-toolbar" role="toolbar">
+    <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
+      <a href="#" class="btn btn-violet" ng-click="select.goToPlayPage('6')" role="button">
+        <strong>B</strong><br>
+      </a>
+      <a href="#" class="btn btn-lightred" ng-click="select.goToPlayPage('7')" role="button">
+        <strong>High C</strong><br>
+      </a>
+    </div>
+  </div>
 </div>
 
