*Add note playing. *Style play screen.

--- a/src/app/mobile/play.html
+++ b/src/app/mobile/play.html
@@ -1,9 +1,4 @@
-<div class="container">
+<div ng-click="play.playNote()" class="full-screen-button" ng-class="play.color">
 
-  <div class="jumbotron text-center">
-    <h1>Play Page</h1>
-
-    <h2>Note: {{play.note}}</h2>
-  </div>
 
 </div>
