--- a/src/app/index.css
+++ b/src/app/index.css
@@ -182,3 +182,14 @@ div.measure {
   max-height: 75px;
 }
 
+.full-screen-button {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+.full-screen-button {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
