--- a/src/app/mobile/select.html
+++ b/src/app/mobile/select.html
@@ -27,40 +27,40 @@
  <div class="eggnog-notes container">
   <div class="btn-toolbar " role="toolbar">
     <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-      <a class="btn btn-darkred" ui-sref="mobile.select({note: 0})" role="button">
+      <a class="btn btn-darkred" ui-sref="mobile.play({note: 0})" role="button">
         <strong>Low C</strong><br>
       </a>
-      <a class="btn btn-orange" ui-sref="mobile.select({note: 1})" role="button">
+      <a class="btn btn-orange" ui-sref="mobile.play({note: 1})" role="button">
         <strong>D</strong><br>
       </a>
     </div>
   </div>
   <div class="btn-toolbar" role="toolbar">
     <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-      <a href="#" class="btn btn-yellow" ui-sref="mobile.select({note: 2})" role="button">
+      <a href="#" class="btn btn-yellow" ui-sref="mobile.play({note: 2})" role="button">
         <strong>E</strong><br>
       </a>
-      <a class="btn btn-success" ui-sref="mobile.select({note: 3})" role="button">
+      <a class="btn btn-success" ui-sref="mobile.play({note: 3})" role="button">
         <strong>F</strong><br>
       </a>
     </div>
   </div>
   <div class="btn-toolbar" role="toolbar">
     <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-      <a href="#" class="btn btn-primary" ui-sref="mobile.select({note: 4})" role="button">
+      <a href="#" class="btn btn-primary" ui-sref="mobile.play({note: 4})" role="button">
         <strong>G</strong><br>
       </a>
-      <a class="btn btn-indigo" ui-sref="mobile.select({note: 5})" role="button">
+      <a class="btn btn-indigo" ui-sref="mobile.play({note: 5})" role="button">
         <strong>A</strong><br>
       </a>
     </div>
   </div>
   <div class="btn-toolbar" role="toolbar">
     <div class="btn-group btn-group-lg btn-group-justified btn-group-fill-height">
-      <a class="btn btn-violet"  ui-sref="mobile.select({note: 6})" role="button">
+      <a class="btn btn-violet"  ui-sref="mobile.play({note: 6})" role="button">
         <strong>B</strong><br>
       </a>
-      <a class="btn btn-lightred" ui-sref="mobile.select({note: 7})" role="button">
+      <a class="btn btn-lightred" ui-sref="mobile.play({note: 7})" role="button">
         <strong>High C</strong><br>
       </a>
     </div>
